--- a/.github/workflows/ci_cd_qa.yml
+++ b/.github/workflows/ci_cd_qa.yml
@@ -1,9 +1,9 @@
-name: CI/CD Pipeline for Django Project
+name: CI/CD QA
 
 on:
   push:
     branches:
-      - production
+      - qa_uat
 
 jobs:
   build:
@@ -16,27 +16,21 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Build Docker image
+      run: docker build -t anandvmclt/templeaddress:qa_uat .
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        platforms: linux/amd64
-        push: true
-        tags: anandvmclt/templeaddress:latest
+    - name: Push Docker image
+      run: docker push anandvmclt/templeaddress:qa_uat
