--- a/.github/workflows/ci_cd_development.yml
+++ b/.github/workflows/ci_cd_development.yml
@@ -1,9 +1,9 @@
-name: CI/CD Development
+name: CI/CD Pipeline for TempleAddress Project - Develop
 
 on:
   push:
     branches:
-      - develop
+      - development
 
 jobs:
   build:
@@ -16,21 +16,27 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Build Docker image
-      run: docker build -t anandvmclt/templeaddress:development .
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Push Docker image
-      run: docker push anandvmclt/templeaddress:development
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64
+        push: true
+        tags: anandvmclt/templeaddress:development
