Updated DB volume and endpoint Script

--- a/.github/workflows/ci_cd_production.yml
+++ b/.github/workflows/ci_cd_production.yml
@@ -41,7 +41,7 @@ jobs:
         push: true
         tags: anandvmclt/templeaddress:production
 
-    - name: Copy entrypoint.sh to container
-      run: |
-        cp entrypoint.sh /code/
-        chmod +x /code/entrypoint.sh
+    # - name: Copy entrypoint.sh to container
+    #   run: |
+    #     cp entrypoint.sh /code/
+    #     chmod +x /code/entrypoint.sh
