--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.10'
+# version: '3.9'
 
 services:
   db:
@@ -16,6 +16,8 @@ services:
       retries: 5
     env_file:
       - .env
+    ports:
+      - "5433:5432"  # Mapping container port 5432 to host port 5433
 
   web:
     build: .
@@ -25,13 +27,14 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_HOST: db
-      POSTGRES_PORT: ${DB_PORT}
+      POSTGRES_PORT: 5432
     env_file:
       - .env
 
